# PhantomShield

./: .dockerignore  .gitignore  DEVLOG.md  MCU-Transformer_完整技术方案(1).docx  MCU-Transformer_完整技术方案.md  README.md  docx_to_md.py  party.py  requirements.txt  structure_out.txt  verify_result.py
docker/: Dockerfile.crypten  Dockerfile.mcu  Dockerfile.mcu.bert_session  Dockerfile.mcu.cuda  README.md  crypten_persistent_service.py  crypten_rank_bench.py  docker-compose.gpu.yml  docker-compose.mpc.yml  docker-compose.warm.yml  mcu_entrypoint.sh
docs/: 20260624_real_comm_experiment_report.md  20260628_goal1_operator_optimization_report.md  20260628_goal2_bert_docker_testing_report.md  20260628_project_progress_tracking.md
experiments/: benchmark_inference_paths.py  benchmark_linear.py  benchmark_results.csv  crypten_bert_classify.py  measure_crypten_latency.py  run_glue_baseline.py  run_secformer_approx.py  test_bert_linear.py  tiny_bert_demo.py  verify_2quad_collapse.py  verify_mcu_protocols_integration.py
mcu_core/: mock_comm.py  prg_sync.py
mcu_rust/: Cargo.toml  build.rs  pyproject.toml
mcu_rust/benches/: bench.rs
mcu_rust/python/: compare_with_python.py
mcu_rust/src/: bindings.rs  channel.rs  lib.rs  prg.rs  real_protocols.rs  ring.rs  simulate.rs  tensor.rs
mcu_rust/src/cuda/: matmul.cu
mcu_rust/src/protocols/: exp.rs  gelu.rs  mod.rs  multiply.rs  sigmoid.rs  softmax.rs  wrap.rs
mcu_rust/tests/: correctness.rs
scripts/: ENV.md  crypten_compat.py  download_models.py  patch_frontend.py  setup_env.ps1
tests/: test_inference_paths.py
(+50 files in other folders)
